--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Best Digital Marketing Solutions"
+      name="V1Ads"
       content="Best Digital Marketing Solutions"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
@@ -20,10 +20,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
    
-    <title>Best Digital Marketing Solutions </title>
+    <title>V1Ads</title>
   </head>
   <body>
-    <noscript>Best Digital Marketing Solutions.</noscript>
+    <noscript>V1Ads</noscript>
     <div id="root"></div>
    
   </body>
